<resources>
    <string name="app_name">H-Group</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_number">رقم الهاتف</string>
    <string name="login_phone">تسجيل دخول عن طريق رقم الهاتف</string>
    <string name="password">كلمة المرور</string>
    <string name="login_text">تسجيل دخول</string>
    <string name="forget_password">نسيت كلمة المرور؟</string>
    <string name="password_text">كلمة المرور</string>
    <string name="products_stores">المنتجات ومخازن</string>
    <string name="reports">التقارير</string>
    <string name="accountant_delegates">مندوبين و محاسبين</string>
    <string name="delivery">توصيل</string>
    <string name="make_order">انشاء طلبية</string>
    <string name="special_customers">" عملاء مميزين"</string>
    <string name="stores">مخازن</string>
    <string name="products">منتجات</string>
    <string name="add_product">اضف منتج</string>
    <string name="piece">قطعة</string>
    <string name="product_status">"حالة الطلب / "</string>
    <string name="more">المزيد</string>
    <string name="selected">تم تحديد</string>
    <string name="un_selected">غير محدد</string>
    <string name="no_products">"  لا توجد منتجات متاحه "</string>
    <string name="plz_add_prod">من فضلك اضف منتج</string>
    <string name="belong">ذمة /</string>
    <string name="no_stores">"  لا توجد مخان متاحه "</string>
    <string name="plz_add_store">من فضلك اضف مخزن</string>
    <string name="add_store">اضف مخزن</string>
    <string name="delegates">مندوبين</string>
    <string name="accounatnts">محاسبين</string>
    <string name="delegate">" مندوب"</string>
    <string name="accounatnt">محاسب</string>
    <string name="orders">الطلبات</string>
    <string name="portfolio">المحفظة</string>
    <string name="delivered">تم التوصيل</string>
    <string name="waiting">في الانتظار</string>
    <string name="feeValue">"قيمة رسوم "</string>
    <string name="shipping_fee">رسوم الشحن</string>
    <string name="total_price">إجمالي السعر</string>
    <string name="add_accountant">اضف محاسب</string>
    <string name="confirmation">تآكيد</string>
    <string name="accountant_name">اسم المحاسب</string>
    <string name="delegate_name">اسم مندوب</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="country_name">اسم المحافظة</string>
    <string name="passwordText">كلمة سر</string>
    <string name="congrate">تهانيا</string>
    <string name="done_add_accountant">تم اضافة المحاسب</string>
    <string name="store_name">اسم المخزن</string>
    <string name="store_address">عنوان المخزن</string>
    <string name="store_number">تحديد عدد المتجر</string>
    <string name="product_category">تصنيف المنتج</string>
    <string name="gwalat">الجوالات</string>
    <string name="responsible_person">تحديد مسئول الذمة</string>
    <string name="search">بحث</string>
    <string name="categories">التصنيفات</string>
    <string name="add_category">اضف تصنيف</string>
    <string name="total">اجمالي:</string>
    <string name="receipt">استلام:</string>
    <string name="creditor">دائن:</string>
    <string name="add_customer">اضافة عميل</string>
    <string name="create_customer">انشاء عميل مميز</string>
    <string name="customer_name">اسم العميل</string>
    <string name="mobileNumber">رقم الموبيل</string>
    <string name="address">العنوان</string>
    <string name="email_address">البريد الالكتروني</string>
    <string name="setting">الاعدادات</string>
    <string name="edit_profile">تعديل الملف الشخصي</string>
    <string name="admin">الادمن</string>
    <string name="msrofat">المصروفات</string>
    <string name="editPassword">تعديل كلمة المرور</string>
    <string name="getNotification">استقبال اشعارات</string>
    <string name="logOut">تسجيل خروج</string>
    <string name="payments">المدفوعات</string>
    <string name="appInfo">تطبيق الحل التقني الجديد والاسهل\n لإدارة المبيعات</string>
    <string name="versionNumb">اصدار نسخة</string>
    <string name="name">الاسم</string>
    <string name="save">حفظ</string>
    <string name="choose_from_mobile_pic">اختار من صور الهاتف</string>
    <string name="take_photo">إلتقاط صورة من الكامير</string>
    <string name="add_admin">اضف ادمن</string>
    <string name="deleteAdmin">مسح الادمن</string>
    <string name="blockAdmin">حظر الادمن</string>
    <string name="adminName">اسم الادمن</string>
    <string name="done_add_admin">تم اضافة الادمن</string>
    <string name="feesRequest">طلب سحب المصروفات:</string>
    <string name="accept">قبول</string>
    <string name="reject">رفض</string>
    <string name="no_fees">"  لا توجد مصروفات متاحه "</string>
    <string name="price">" السعر"</string>
    <string name="currantPassword">كلمة المرور الحالية</string>
    <string name="newPassword">كلمة المرور الجديدة</string>
    <string name="confirmPassword">تآكيد كلمة المرور الجديدة</string>
    <string name="addition">اضافة</string>
    <string name="no_payment_exist">"  لا توجد مدفوعات متاحه "</string>
    <string name="addDescrption">اكتب وصف</string>
    <string name="forget_pass_header">هل نسيت كلمه المرور؟</string>
    <string name="dont_worry">لا تقلق يمكنك اعاده ضبط كلمه المرور بسهوله هنا.</string>
    <string name="reset_phone">ادخل رقم الهاتف</string>
    <string name="send">ارسال</string>
    <string name="product_image">صورة منتج</string>
    <string name="gallery_presenter">معرض الصور</string>
    <string name="photo_camera">الكاميرا</string>
    <string name="productName">اسم المنتج</string>
    <string name="describe_product">وصف منتج</string>
    <string name="numberof_delivery">العدد / الكمية التوصيل</string>
    <string name="product_level">تصنيف منتج</string>
    <string name="save_store">تصنيف المخزن</string>
    <string name="barcode">"لانهاء باركود قم بتصوير "</string>
    <string name="current_currency">كشف حساب</string>
    <string name="confirm">تاكيد</string>
    <string name="sales">المبيعات</string>
    <string name="delivereds">مستلمة</string>
    <string name="filter">فلتر</string>
    <string name="product_summary">تصفية المبيعات</string>
    <string name="monthly">شهرى</string>
    <string name="annualy">سنوى</string>
    <string name="address_delivery">عنوان التوصيل</string>
    <string name="customerSelect">"تحديد عميل "</string>
    <string name="product">المنتج</string>
    <string name="store">" المخزن"</string>
    <string name="creditorr">دائن</string>
    <string name="valuePaidNow">" قيمة المدفوعه الان"</string>
    <string name="cash">كاش</string>
    <string name="notification">التنبيهات</string>
    <string name="about_account">كل ما تحتاجه لإدارة الحسابات الخاصة بك</string>
    <string name="confirms">التاكيد</string>
    <string name="dont_get_code">أدخل رمز التحقق الذي نرسله لك على رقم الهاتف</string>
    <string name="send_again">إذا لم تستلم رمزًا</string>
    <string name="send_ramz"><u>ارسال الرمز مرة أخرى</u></string>
    <string name="phone_required">الهاتف مطلوب</string>
    <string name="phone_not_valid">الهاتف غير صالح</string>
    <string name="password_required">كلمة المرور مطلوبة</string>
    <string name="password_not_valid">كلمة المرور غير صالحة</string>
    <string name="loader" translatable="false">BallSpinFadeLoaderIndicator</string>
    <string name="error">خطأ</string>
    <string name="no_connect">لايوجد إتصال بالانترنت</string>
    <string name="cant_add_image">لا يمكنك إضافة صورة</string>
    <string name="selection_option">إختر خيارا</string>
    <string name="close">اغلاق</string>
    <string name="role">الوظيفة</string>
    <string name="choose_admin">ادمن</string>
    <string name="callCenter">خدمه عملاء</string>
    <string name="confirmPasswordOnly">تآكيد كلمة المرور</string>
    <string name="accountant_name_required">اسم المحاسب مطلوب</string>
    <string name="city_name_required">اسم المحافظه مطلوب</string>
    <string name="confirm_pass_required">تآكيد كلمة المرور مطلوب</string>
    <string name="job_required">الوظيفه مطلوبه</string>
    <string name="password_confirm">تاكد من تطابق كلمه المرور</string>
    <string name="store_name_required">اسم المخزن مطلوب</string>
    <string name="store_address_required">عنوان المخزن مطلوب</string>
    <string name="product_classified_required">تصنيف المنتج مطلوب</string>
    <string name="responsible_person_required">تحديد مسئول الذمة مطلوب</string>
    <string name="client_name_required">اسم العميل مطلوب</string>
    <string name="client_address_required">العنوان مطلوب</string>
    <string name="email_name_reuqired">البريد الالكتروني مطلوب</string>
    <string name="email_invalid">البريد الإلكتروني غير صالح ، يجب أن يكون مثل: ex.email@address.com</string>
    <string name="select_product_image">اختر صورة المنتج من فضلك</string>
    <string name="product_name_required">اسم المنتج مطلوب</string>
    <string name="product_desc_required">وصف المنتج مطلوب</string>
    <string name="product_classify_required">تصنيف المنتج مطلوب</string>
    <string name="select_store_classify">تصنيف مخزن مطلوب</string>
    <string name="price_required">السعر مطلوب</string>
    <string name="barecode_required">باركود مطلوب</string>
    <string name="add_new_password">ادخل كلمة السر الجديدة</string>
    <string name="code">Please enter the verification code</string>
    <string name="phone_is_required">رقم الهاتف مطلوب</string>
    <string name="new_password_required">تأكيد كلمة المرور مطلوبة</string>
    <string name="confirm_pass_invalid">تأ:يد كلمة المرور غير متطابقة</string>
    <string name="notifications_reports">اشعارات و بلاغات</string>
    <string name="make_special_order">انشاء طلبية خاصة</string>
    <string name="send_sales">ارسال مبيعات</string>
    <string name="classification">"تصنيف "</string>
    <string name="quantity">الكمية</string>
    <string name="description">"الوصف: "</string>
    <string name="delegateSelect">تحديد مندوب</string>
    <string name="saveBarcode">تنزيل الباركود</string>
    <string name="delegate_call_center">مندوبين وكول سنتر</string>
    <string name="call_center_layout">كول سنتر</string>
    <string name="add_delegate">اضف مندوب</string>
    <string name="add_call_center">اضف كول سنتر</string>
    <string name="call_center">كول سنتر</string>
    <string name="call_center_name">اسم الكول سنتر</string>
    <string name="name_is_required">الأسم مطلوب</string>
    <string name="added_successfully">تمت الإضافة بنجاح</string>
    <string name="current_password_required">كلمة المرور الحالية مطلوبة</string>
    <string name="edit_call_center">تعديل الكول سنتر</string>
    <string name="delete_call_center">مسح الكول سنتر</string>
    <string name="block_call">حظر الكول سنتر</string>
    <string name="view_profile">تعديل الملف الشخصى</string>
    <string name="delete_delegate">مسح المندوب</string>
    <string name="block_delegate">حظر المندوب</string>
    <string name="edit_delegate">تعديل المندوب</string>
    <string name="title_required">العنوان مطلوب</string>
    <string name="description_required">الوصف مطلوب</string>
    <string name="delete">مسح</string>
    <string name="update">تعديل</string>
    <string name="not_received">الغير مستلمة</string>
    <string name="received">مستلمة</string>
    <string name="no_sales">لا توجد مبيعات متاحه</string>
    <string name="send_admin">ارسال الي الادمن</string>
    <string name="no_notifications">لا توجد تنبيهات متاحه</string>
    <string name="delivery_address">عنوان التوصيل</string>
    <string name="recipientName">اسم المستلم</string>
    <string name="barcodeText">لانهاء باركود قم بتصوير \n كشف الحساب</string>
    <string name="add_noticesReports">قم بالبحث عن اسم المندوب باختيار المندوب الذي سيتم ارسال اليهم البلاغ</string>
    <string name="addNotificaion">اضف اشعار</string>
    <string name="writeMessage">اكتب الرساله</string>
    <string name="choose_delegate">تحديد مندوب</string>
    <string name="productDetails">تفاصيل المنتجات</string>
    <string name="quantityD">الكمية:</string>
    <string name="storeNameD">اسم المخزن:</string>
    <string name="categoryName">اسم التصنيف:</string>
</resources>