<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".common.forgetpassword.ForgetPassword">

    <ImageView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:background="@android:color/transparent"
        android:layout_marginTop="@dimen/_10sdp"
        app:srcCompat="@drawable/ic_back_button"
        />


    <ImageView
        android:id="@+id/forgetPassImage"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="@dimen/_10sdp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetPassImage"
        android:id="@+id/forgetPassHeader"
        android:text="@string/confirms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:textColor="@color/login_gray"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetPassHeader"
        android:id="@+id/secondHeader"
        android:text="@string/dont_get_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/phoneContainer"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="@id/secondHeader"
        app:layout_constraintStart_toStartOf="@id/secondHeader"
        app:layout_constraintTop_toBottomOf="@+id/secondHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content">


        <com.alahammad.otp_view.OtpView
            android:id="@+id/otp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:otp_number="4" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneContainer"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:backgroundTint="@color/orange_color"
        app:cornerRadius="7dp"
        android:textStyle="bold"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="@dimen/_18sdp"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"/>

    <TextView
        android:textColor="@color/login_gray"
        android:layout_marginStart="@dimen/_15sdp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintStart_toStartOf="@id/confirmButton"
        app:layout_constraintTop_toBottomOf="@+id/confirmButton"
        android:id="@+id/not_recieved"
        android:text="@string/send_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/light_red"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_5sdp"
        android:textAlignment="center"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintStart_toEndOf="@id/not_recieved"
        app:layout_constraintTop_toBottomOf="@+id/confirmButton"
        android:id="@+id/sendAgain"
        android:text="@string/send_ramz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>