<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardBackgroundColor="@color/white"
    android:layout_marginStart="@dimen/_24sdp"
    android:layout_marginEnd="@dimen/_24sdp"
    android:layout_marginTop="@dimen/_24sdp"
    android:layout_marginBottom="@dimen/_24sdp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/categoryNameTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/categoryName"
            android:textAlignment="viewStart"
            />

        <EditText
            android:textColor="@color/black"
            android:id="@+id/categoryNameEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryNameTitle"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_16sdp"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:backgroundTint="@color/orange_color"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:cornerRadius="5dp"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/add_category"
            app:layout_constraintTop_toBottomOf="@+id/categoryNameEditTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            />
        <com.google.android.material.button.MaterialButton
            android:visibility="gone"
            android:id="@+id/updateBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:backgroundTint="@color/orange_color"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:cornerRadius="5dp"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/update"
            app:layout_constraintTop_toBottomOf="@+id/categoryNameEditTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>



</com.google.android.material.card.MaterialCardView>